gnome ui: Ensure sidebar titlebar buttons aren't too close to right edge. Add a border on the sidebar titlebars on the edge against the main editor pane to ensure visual separation from the editor tabs scroll buttons. Not ideal, but better I think.
(integrated from komodo (trunk) change 24289 by trentm)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2383 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/bindings/sidebar.css
+++ b/src/chrome/komodo/skin/plat/gnome/bindings/sidebar.css
@@ -12,6 +12,7 @@ tabbox.sidepanel label.tab-text {
 /* Ensure the buttons are vertically aligned. */
 .sidebar-buttons {
   -moz-box-align: center;
+  padding-right: 6px;
 }
 
 /* Drop the default 1 pixel border around trees and make the top border
@@ -23,4 +24,11 @@ tabbox.sidepanel tree
   border: 0;
   margin: 0;
   border-top: 1px solid;
+}
+
+tabbox#leftTabBox > tabs {
+    border-right: 1px solid ThreeDShadow;
+}
+tabbox#rightTabBox > tabs {
+    border-left: 1px solid ThreeDShadow;
 }
